# jeepney-stubs

./: .mypyignore  CONTRIBUTING.md  LICENSE  README.md  __init__.pyi  bus.pyi  bus_messages.pyi  fds.pyi  low_level.pyi  pyproject.toml  wrappers.pyi
.github/workflows/: ci.yml  publish.yml
io/: common.pyi
jeepney-stubs/: auth.pyi  bus_messages.pyi  fds.pyi  low_level.pyi  wrappers.pyi
jeepney-stubs/io/: asyncio.pyi  blocking.pyi  common.pyi
tests/: smoke_test.py
